--- a/ClassConnect.html
+++ b/ClassConnect.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
     <link rel="stylesheet" href="ClassConnect.css">
-    <title>Class Connect</title>
+    <title>Connect-Ed Instructor</title>
 </head>
 
 <body>
@@ -27,9 +27,15 @@
                     <div class="row questionsLiveFeed">This is the live questions feed</div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row statsBar">
                 <!-- Stats Bar -->
-                <div class="col-md-12 statsBar"> Stats Bar
+                <p class="statsBox mean col-sm-2"> MEAN </p>
+                <p class="statsBox median col-sm-2"> MEDIAN </p>
+                <p class="statsBox min col-sm-2"> MIN </p>
+                <p class="statsBox max col-sm-2"> MAX </p>
+            
+
+
                 </div>
             </div>
         </div>
