--- a/ClassConnect.html
+++ b/ClassConnect.html
@@ -2,12 +2,22 @@
 <html>
 
 <head>
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <!-- SCRIPTS -->
+
+    <!-- Firebase Library -->
+    <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
+    <!-- jQuery Library -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src = "app.js"></script>
+    <!-- D3 Library -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!-- Native JS File -->
+    <script type="text/javascript" src = "app.js"></script>
+    
+    <!-- Bootstrap Library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Font Library -->
     <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
+    <!-- Native CSS -->
     <link rel="stylesheet" href="ClassConnect.css">
     <title>Connect-Ed Instructor</title>
 </head>
@@ -32,8 +42,10 @@
                 <!-- Stats Bar -->
                 <p class="statsBox mean col-sm-2"> MEAN </p>
                 <p class="statsBox median col-sm-2"> MEDIAN </p>
+                 <p class="statsBox mode col-sm-2"> MODE </p>
                 <p class="statsBox min col-sm-2"> MIN </p>
                 <p class="statsBox max col-sm-2"> MAX </p>
+
             
 
 
