--- a/ClassConnectStudent.html
+++ b/ClassConnectStudent.html
@@ -18,27 +18,27 @@
             <div class="buttonWrapper">
                 <!-- Button 1 -->
                 <div class="col-md-2 entryBar">
-                    <button type="button" class="btn btn-default entry btn1">1</button>
+                    <button type="button" class="btn btn-default entry btn1" value = "1">1</button>
                     <div class="des"> No Understanding</div>
                 </div>
                 <!-- Button 2 -->
                 <div class="col-md-2 entryBar">
-                    <button type="button" class="btn btn-default entry btn2">2</button>
+                    <button type="button" class="btn btn-default entry btn2" value = "2">2</button>
                     <div class="des"></div>
                 </div>
                 <!-- Button 3 -->
                 <div class="col-md-2 entryBar">
-                    <button type="button" class="btn btn-default entry btn3">3</button>
+                    <button type="button" class="btn btn-default entry btn3" value = "3">3</button>
                     <div class="des"> Understand but can't implement</div>
                 </div>
                 <!-- button 4 -->
                 <div class="col-md-2 entryBar">
-                    <button type="button" class="btn btn-default entry btn4">4</button>
+                    <button type="button" class="btn btn-default entry btn4" value = "4">4</button>
                     <div class="des"> </div>
                 </div>
                 <!-- Button 5 -->
                 <div class="col-md-2 entryBar">
-                    <button type="button" class="btn btn-default entry btn5">5</button>
+                    <button type="button" class="btn btn-default entry btn5" value = "5">5</button>
                     <div class="des"> Complete Understanding</div>
                 </div>
             </div>
