--- a/ClassConnectStudent.html
+++ b/ClassConnectStudent.html
@@ -2,11 +2,21 @@
 <html>
 
 <head>
+<!-- SCRIPTS -->
+    <!-- Firebase Library -->
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <!-- jQuery Library -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <!-- D3 Library -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!-- Native JS -->
+    <script src="app.js"></script>
+<!-- STYLES -->
+    <!-- Bootstrap Library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Font Library -->
     <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
+    <!-- Native CSS -->
     <link rel="stylesheet" href="ClassConnect.css">
     <title>Connect-ED Student</title>
 </head>
