--- a/ClassConnect.html
+++ b/ClassConnect.html
@@ -3,7 +3,6 @@
 
 <head>
     <!-- SCRIPTS -->
-
     <!-- Firebase Library -->
     <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
     <!-- jQuery Library -->
@@ -11,8 +10,7 @@
     <!-- D3 Library -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <!-- Native JS File -->
-    <script type="text/javascript" src = "app.js"></script>
-    
+    <script type="text/javascript" src="app.js"></script>
     <!-- Bootstrap Library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Font Library -->
@@ -34,23 +32,26 @@
                 <div class="col-md-8 lineGraph"> This is where the line graph will display, this is an average of the submissions from students
                 </div>
                 <div class="col-md-4">
-                    <div class="row rawDataFeed">This is where the individual data points will populate from students submissions</div>
-                    <div class="row questionsLiveFeed">This is the live questions feed</div>
+                    <div class="row rawDataFeed">
+                        <h class=rawDataFeedHeader>Student Responses</h>
+                    </div>
+                    <div class="row questionsLiveFeed">
+                        <h class=questionsLiveFeedHeader>Student Questions</h>
+                    </div>
                 </div>
             </div>
-            <div class="row statsBar">
+            <div class="row statsBar"> 
                 <!-- Stats Bar -->
+                <br>
+                <h class=classStatsHeader>Class Stats</h>
+                <br>
                 <p class="statsBox mean col-sm-2"> MEAN </p>
                 <p class="statsBox median col-sm-2"> MEDIAN </p>
                 <p class="statsBox min col-sm-2"> MIN </p>
                 <p class="statsBox max col-sm-2"> MAX </p>
-
-            
-
-
-                </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
 </body>
