pushed at 9:44pm (x2)

--- a/ClassConnect.html
+++ b/ClassConnect.html
@@ -17,6 +17,8 @@
     <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
     <!-- Native CSS -->
     <link rel="stylesheet" href="ClassConnect.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
+
     <title>Connect-Ed Instructor</title>
 </head>
 
@@ -32,11 +34,13 @@
                 <div class="col-md-8 lineGraph"> This is where the line graph will display, this is an average of the submissions from students
                 </div>
                 <div class="col-md-4">
+                <h class=rawDataFeedHeader>Student Responses</h>
                     <div class="row rawDataFeed">
-                        <h class=rawDataFeedHeader>Student Responses</h>
+                        
                     </div>
+                    <h class= "questionsLiveFeedHeader">Student Questions</h>
                     <div class="row questionsLiveFeed">
-                        <h class=questionsLiveFeedHeader>Student Questions</h>
+                        
                     </div>
                 </div>
             </div>
