--- a/ClassConnectStudent.html
+++ b/ClassConnectStudent.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
     <!-- Native CSS -->
     <link rel="stylesheet" href="ClassConnect.css">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
     <title>Connect-ED Student</title>
 </head>
 
