--- a/ClassConnectStudent.html
+++ b/ClassConnectStudent.html
@@ -4,55 +4,70 @@
 <head>
     <!-- SCRIPTS -->
     <!-- Firebase Library -->
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
     <!-- jQuery Library -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!-- D3 Library -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <!-- Native JS -->
-    <script src="app.js"></script>
-    <!-- STYLES -->
+    <!-- Native JS File -->
+    <script type="text/javascript" src="app.js"></script>
     <!-- Bootstrap Library -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Font Library -->
     <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
     <!-- Native CSS -->
     <link rel="stylesheet" href="ClassConnect.css">
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
-    <title>Connect-ED Student</title>
+    <!-- Moment.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
+    <!-- Google Charts Library -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+   <title>Connect-ED Student</title>
+   
 </head>
 
 <body>
-    <div class="masterContainer">
-        <div class="jumbotron"> ConnectED </div>
-        <div class="row buttonRow">
-            <!-- Button 1 -->
-            <button type="button" class="btn btn-default entry btn1" value="1">1- No Understanding</button>
+   <div class="masterContainer container">
+       <div class="jumbotron"> ConnectED </div>
+       <div class="row buttonRow">
+           <!-- Button 1 -->
+           <button type="button" class="btn btn-default entry btn1" value="1">1- No Understanding</button>
 
-            <!-- Button 2 -->
-            <button type="button" class="btn btn-default entry btn2" value="2">2</button>
+           <!-- Button 2 -->
+           <button type="button" class="btn btn-default entry btn2" value="2">2</button>
 
-            <!-- Button 3 -->
-            <button type="button" class="btn btn-default entry btn3" value="3">3- Understand but can't implement</button>
+           <!-- Button 3 -->
+           <button type="button" class="btn btn-default entry btn3" value="3">3- Understand but can't implement</button>
 
-            <!-- button 4 -->
-            <button type="button" class="btn btn-default entry btn4" value="4">4</button>
+           <!-- button 4 -->
+           <button type="button" class="btn btn-default entry btn4" value="4">4</button>
 
-            <!-- Button 5 -->
-            <button type="button" class="btn btn-default entry btn5" value="5">5- Complete Understanding</button>
+           <!-- Button 5 -->
+           <button type="button" class="btn btn-default entry btn5" value="5">5- Complete Understanding</button>
 
-        </div>
-    </div>
-    <div class="row questionRow">
-        <div class="input-group">
-            <input type="text" class="form-control textEntry" placeholder="Type your question here....">
-            <!-- Button -->
-            <span class="input-group-btn">
-        <button class="btn submitQuestionButton" type="button">Go!</button>
-      </span>
-        </div>
-        <!-- /input-group -->
-    </div>
+       </div>
+   
+   <div class="row questionRow">
+       <div class="input-group">
+           <input type="text" class="form-control textEntry" placeholder="Type your question here....">
+           <!-- Button -->
+           <span class="input-group-btn">
+       <button class="btn submitQuestionButton" type="button">Go!</button>
+     </span>
+
+       </div>
+       <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     
+       </div>
+       <!-- /input-group -->
+   </div>
 </body>
 
 </html>
