fixed stats bar

--- a/ClassConnect.html
+++ b/ClassConnect.html
@@ -36,8 +36,7 @@
            <!-- reset button -->
            <button type="button" class="btn btn-primary btn-lg btn-block reset">Reset</button>
            <!-- Graph Div -->
-           <div class="col-md-8 lineGraph" id = "curve_chart" style = "width: 750px; height: 300px"> This is where the line graph will display, this is an average of the submissions from students
-           </div>
+           <div class="col-md-8 lineGraph" id = "curve_chart" style = "width: 750px; height: 300px"></div>
            <!-- Raw Data Div -->
            <div class="col-md-4 rawDataFeedFormat">
                <h class=rawDataFeedHeader>Student Responses</h>
