--- a/ClassConnect.html
+++ b/ClassConnect.html
@@ -2,66 +2,84 @@
 <html>
 
 <head>
-    <!-- SCRIPTS -->
-    <!-- Firebase Library -->
-    <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
-    <!-- jQuery Library -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <!-- D3 Library -->
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <!-- Native JS File -->
-    <script type="text/javascript" src="app.js"></script>
-    <!-- Bootstrap Library -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Font Library -->
-    <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
-    <!-- Native CSS -->
-    <link rel="stylesheet" href="ClassConnect.css">
-    <!-- Moment.js Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
-    <!-- Google Charts Library -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
+   <!-- SCRIPTS -->
+   <!-- Firebase Library -->
+   <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
+   <!-- jQuery Library -->
+   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+   <!-- Native JS File -->
+   <script type="text/javascript" src="app.js"></script>
+   <!-- Bootstrap Library -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+   <!-- Font Library -->
+   <link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
+   <!-- Native CSS -->
+   <link rel="stylesheet" href="ClassConnect.css">
+   <!-- Moment.js Library -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
+   <!-- Google Charts Library -->
+   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
    <title>Connect-Ed Instructor</title>
-
 </head>
 
 <body>
    <!-- Master container -->
    <div class="container masterContainer">
+
        <!-- Jumbotron -->
-       <div class="jumbotron"> ConnectED</div>
-       <!-- Container holding data -->
-       <div class="row data">
-           <!-- reset button -->
+       <div class="jumbotron"> ConnectED
+           <p> Instructor Dashboard
+               <p>
+       </div>
+
+
+       <!-- Row for reset button -->
+       <div class="row">
            <button type="button" class="btn btn-primary btn-lg btn-block reset">Reset</button>
-           <!-- Graph Div -->
-           <div class="col-md-8 lineGraph" id = "curve_chart" style = "width: 750px; height: 300px"></div>
-           <!-- Raw Data Div -->
-           <div class="col-md-4 rawDataFeedFormat">
-               <h class=rawDataFeedHeader>Student Responses</h>
-               <div class="row rawDataFeed"></div>
-           </div>
-           <!-- Questions Div -->
-           <div class="questionsLiveFormat">
-               <h class="questionsLiveFeedHeader">Student Questions</h>
-               <div class="row questionsLiveFeed"></div>
-           </div>
-       
-       <!-- Stats Bar Div -->
-       <div class="row statsBar">
-           <!-- Stats Bar -->
-           <br>
-           <h class=classStatsHeader>Class Stats</h>
-           <br>
-           <div class="stats">
-               <div class="statsBox mean col-xs-3"> MEAN </div>
-               <div class="statsBox median col-xs-3"> MEDIAN </div>
-               <div class="statsBox min col-xs-3"> MIN </div>
-               <div class="statsBox max col-xs-3"> MAX </div>
+       </div>
+
+
+       <!-- Row for Line Graph and Stats Bar -->
+       <div class="row">
+           <div class="col-md-7 lineGraph" id="curve_chart" style="width: 750px; height: 300px"></div>
+           <div class=" col-md-5 statsBar">
+               <h class="classStatsHeader">Class Stats</h>
+               <p class ="instructions2"> **Statistics represent the last ten submissions ** </p>
+               <br>
+               <div class="stats ">
+                   <div class="statsBox mean"> MEAN </div>
+                   <div class="statsBox median"> MEDIAN </div>
+                   <div class="statsBox min"> MIN </div>
+                   <div class="statsBox max"> MAX </div>
+               </div>
            </div>
        </div>
+
+
+       <!-- Row for Raw Data -->
+       <div class=" row rawDataFeedFormat">
+           <h class=rawDataFeedHeader>Student Responses</h>
+           <div class="rawDataFeed"></div>
+       </div>
+
+
+
+       <!-- Row for question feed -->
+       <div class=" row questionsLiveFormat">
+           <h class="questionsLiveFeedHeader">Student Questions</h>
+           <div class="row questionsLiveFeed"></div>
+       </div>
+
+
+
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
    </div>
+
 </body>
 
 </html>
