fixed googlecharts error

--- a/ClassConnectStudent.html
+++ b/ClassConnectStudent.html
@@ -29,7 +29,7 @@
            <p> Student Interface </div>
        <!-- div to store the buttons -->
        <div class="row buttonRow">
-       <p class ="instructions ratingIntro"> How well are you learning? Give your instructor feedback!</p>       
+       <p class ="ratingIntro"> How well are you learning? Give your instructor feedback!</p>       
            <!-- Button 1 -->
            <button type="button" class="btn btn-default entry btn1" value="1">1- No Understanding</button>
            <!-- Button 2 -->
